feat: 添加安全性文档以增强项目安全性