@@ -6,6 +6,7 @@ import io.jsonwebtoken.JwtException;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
+import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Value;
@@ -23,9 +24,7 @@ import java.util.stream.Collectors;
 /**
  * JWT服务类 - 负责JWT令牌的生成、解析和验证
  *
- * @Author: joetao
- * @Date: 2024/7/31 13:47
- * @Updated: 2025/7/9 优化代码结构和安全性
+ * @author wrm
  */
 @Slf4j
 @Component
@@ -37,35 +36,34 @@ public class JwtService {
     public static final String AI_ACCESS_TOKEN = "aiAccessToken";
 
     // Token有效期常量（分钟）
-    private static final long ACCESS_TOKEN_VALIDITY = 1L;
-    private static final long REFRESH_TOKEN_VALIDITY = 60L * 24 * 15; // 15天
-    private static final long AI_TOKEN_VALIDITY = 60L * 24 * 15; // 15天
+    @Value("${jwt.access-token-validity:30}")
+    private long ACCESS_TOKEN_VALIDITY;
+    @Value("${jwt.refresh-token-validity:21600}")
+    private long REFRESH_TOKEN_VALIDITY;
+    @Value("${jwt.ai-token-validity:21600}")
+    private long AI_TOKEN_VALIDITY;
+
     // 存储RefreshToken映射：username -> Set<RefreshTokenInfo> (支持多设备登录)
     private final Map<String, Set<RefreshTokenInfo>> userRefreshTokenMap = new ConcurrentHashMap<>();
     // RefreshToken黑名单 (存储被撤销的token JTI)
     private final Set<String> revokedRefreshTokens = ConcurrentHashMap.newKeySet();
-    // JWT密钥 - 建议从配置文件读取
-    @Value("${jwt.secret:357638792F423F4428472B4B62L0E5S368566D597133743677397A2443264629}")
+
+    @Value("${jwt.secret}")
     private String jwtSecret;
-    // RefreshToken专用密钥 - 增强安全性
-    @Value("${jwt.refresh-secret:457638792F423F4428472B4B62L0E5S368566D597133743677397A2443264630}")
+
+    @Value("${jwt.refresh-secret}")
     private String refreshTokenSecret;
 
-    /**
-     * 从Token中提取用户名
-     */
     public String extractUsername(String token) {
         try {
-            return extractClaim(token, Claims::getSubject);
-        } catch (JwtException e) {
+            Claims claims = extractClaimsIntelligently(token);
+            return claims != null ? claims.getSubject() : null;
+        } catch (Exception e) {
             log.warn("提取用户名失败: {}", e.getMessage());
             return null;
         }
     }
 
-    /**
-     * 从Token中提取过期时间（安全方法，即使Token过期也能提取）
-     */
     public Date extractExpiration(String token) {
         try {
             Claims claims = extractClaimsIntelligently(token);
@@ -76,22 +74,19 @@ public class JwtService {
         }
     }
 
-    /**
-     * 检查Token是否过期
-     */
     public boolean isTokenExpired(String token) {
         try {
-            Date expiration = extractExpiration(token);
+            Claims claims = extractClaimsIntelligently(token);
+            if (claims == null)
+                return true;
+            Date expiration = claims.getExpiration();
             return expiration != null && expiration.before(new Date());
         } catch (Exception e) {
             log.warn("检查Token过期状态失败: {}", e.getMessage());
-            return true; // 异常情况视为过期
+            return true;
         }
     }
 
-    /**
-     * 验证Token是否有效
-     */
     public boolean isTokenValid(String token, String username) {
         try {
             String tokenUsername = extractUsername(token);
@@ -102,17 +97,11 @@ public class JwtService {
         }
     }
 
-    /**
-     * 通用的Claim提取方法
-     */
     public <T> T extractClaim(String token, Function<Claims, T> claimsResolver) {
-        final Claims claims = extractAllClaims(token);
-        return claimsResolver.apply(claims);
+        final Claims claims = extractClaimsIntelligently(token);
+        return claims != null ? claimsResolver.apply(claims) : null;
     }
 
-    /**
-     * 提取Token中的权限信息
-     */
     public Set<GrantedAuthority> getAuthoritiesFromToken(String token) {
         try {
             String scope = extractClaim(token, claims -> claims.get("scope", String.class));
@@ -131,9 +120,6 @@ public class JwtService {
         }
     }
 
-    /**
-     * 获取Token类型
-     */
     public String getTokenType(String token) {
         try {
             return extractClaim(token, claims -> claims.get("grantType", String.class));
@@ -144,22 +130,10 @@ public class JwtService {
     }
 
     /**
-     * 提取Token的所有Claims
-     */
-    private Claims extractAllClaims(String token) {
-        return Jwts.parser()
-                .verifyWith((SecretKey) getSignKey())
-                .build()
-                .parseSignedClaims(token)
-                .getPayload();
-    }
-
-    /**
-     * 验证RefreshToken是否有效 - 增强版本
+     * 验证RefreshToken是否有效
      */
     public boolean isValidRefreshToken(String token) {
         try {
-            // 使用智能Claims提取方法，能够正确处理RefreshToken的专用密钥
             Claims claims = extractClaimsIntelligently(token);
             if (claims == null) {
                 return false;
@@ -173,7 +147,6 @@ public class JwtService {
                 return false;
             }
 
-            // 检查是否在黑名单中
             if (revokedRefreshTokens.contains(jti)) {
                 log.warn("RefreshToken {} 已被撤销", jti);
                 return false;
@@ -184,7 +157,6 @@ public class JwtService {
                 return false;
             }
 
-            // 查找匹配的RefreshToken
             return tokenInfos.stream()
                     .anyMatch(tokenInfo -> !tokenInfo.isExpired() &&
                             tokenInfo.getJti().equals(jti));
@@ -194,9 +166,6 @@ public class JwtService {
         }
     }
 
-    /**
-     * 提取JWT ID
-     */
     public String extractJti(String token) {
         try {
             return extractClaim(token, claims -> claims.get("jti", String.class));
@@ -206,9 +175,6 @@ public class JwtService {
         }
     }
 
-    /**
-     * 检查是否为AccessToken
-     */
     public boolean isAccessToken(String token) {
         try {
             String grantType = getTokenType(token);
@@ -219,9 +185,6 @@ public class JwtService {
         }
     }
 
-    /**
-     * 检查是否为AI访问Token
-     */
     public boolean isAiAccessToken(String token) {
         try {
             String grantType = getTokenType(token);
@@ -232,35 +195,25 @@ public class JwtService {
         }
     }
 
-    /**
-     * 生成访问Token
-     */
     public String generateToken(String username, String authorities) {
         Map<String, Object> claims = new HashMap<>();
         claims.put("grantType", ACCESS_TOKEN);
         claims.put("scope", authorities);
-
         return createToken(claims, username, ACCESS_TOKEN_VALIDITY);
     }
 
-    /**
-     * 生成AI聊天Token
-     */
     public String generateAiChatToken(String username) {
         Map<String, Object> claims = new HashMap<>();
         claims.put("grantType", AI_ACCESS_TOKEN);
-
         return createToken(claims, username, AI_TOKEN_VALIDITY);
     }
 
     /**
-     * 生成刷新Token - 增强安全版本
+     * 生成刷新Token - 支持多设备登录
      */
     public String generateRefreshToken(String username, String deviceInfo, String clientIp) {
-        // 清理过期的RefreshToken
         cleanExpiredRefreshTokens();
-
-        String jti = UUID.randomUUID().toString(); // 生成唯一ID
+        String jti = UUID.randomUUID().toString();
         Map<String, Object> claims = new HashMap<>();
         claims.put("grantType", REFRESH_TOKEN);
         claims.put("jti", jti);
@@ -270,7 +223,6 @@ public class JwtService {
         String refreshToken = createRefreshToken(claims, username, REFRESH_TOKEN_VALIDITY);
         Date expireTime = new Date(System.currentTimeMillis() + REFRESH_TOKEN_VALIDITY * 60 * 1000);
 
-        // 存储RefreshToken信息
         RefreshTokenInfo tokenInfo = new RefreshTokenInfo(jti, refreshToken, expireTime, deviceInfo, clientIp);
         userRefreshTokenMap.computeIfAbsent(username, k -> ConcurrentHashMap.newKeySet()).add(tokenInfo);
 
@@ -278,41 +230,27 @@ public class JwtService {
         return refreshToken;
     }
 
-    /**
-     * 兼容性方法 - 无设备信息的RefreshToken生成
-     */
     public String generateRefreshToken(String username) {
         return generateRefreshToken(username, "unknown", "unknown");
     }
 
-    /**
-     * 清理过期的RefreshToken
-     */
     public void cleanExpiredRefreshTokens() {
-        userRefreshTokenMap.entrySet().forEach(entry -> {
-            Set<RefreshTokenInfo> tokens = entry.getValue();
+        userRefreshTokenMap.forEach((key, tokens) -> {
             tokens.removeIf(RefreshTokenInfo::isExpired);
             if (tokens.isEmpty()) {
-                userRefreshTokenMap.remove(entry.getKey());
+                userRefreshTokenMap.remove(key);
             }
         });
     }
 
-    /**
-     * 撤销用户的所有RefreshToken
-     */
     public void revokeAllRefreshTokens(String username) {
         Set<RefreshTokenInfo> tokens = userRefreshTokenMap.remove(username);
         if (tokens != null) {
-            // 将所有JTI加入黑名单
             tokens.forEach(token -> revokedRefreshTokens.add(token.getJti()));
             log.info("撤销用户 {} 的所有RefreshToken", username);
         }
     }
 
-    /**
-     * 撤销特定的RefreshToken
-     */
     public void revokeRefreshToken(String username, String jti) {
         Set<RefreshTokenInfo> tokens = userRefreshTokenMap.get(username);
         if (tokens != null) {
@@ -322,9 +260,6 @@ public class JwtService {
         }
     }
 
-    /**
-     * 创建Token的核心方法 (AccessToken和AI Token)
-     */
     private String createToken(Map<String, Object> claims, String username, Long minutes) {
         Date now = new Date();
         Date expiration = new Date(now.getTime() + minutes * 60 * 1000);
@@ -338,9 +273,6 @@ public class JwtService {
                 .compact();
     }
 
-    /**
-     * 创建RefreshToken的方法 (使用专用密钥)
-     */
     private String createRefreshToken(Map<String, Object> claims, String username, Long minutes) {
         Date now = new Date();
         Date expiration = new Date(now.getTime() + minutes * 60 * 1000);
@@ -354,17 +286,11 @@ public class JwtService {
                 .compact();
     }
 
-    /**
-     * 获取AccessToken签名密钥
-     */
     private Key getSignKey() {
         byte[] keyBytes = Decoders.BASE64.decode(jwtSecret);
         return Keys.hmacShaKeyFor(keyBytes);
     }
 
-    /**
-     * 获取RefreshToken专用签名密钥
-     */
     private Key getRefreshTokenSignKey() {
         byte[] keyBytes = Decoders.BASE64.decode(refreshTokenSecret);
         return Keys.hmacShaKeyFor(keyBytes);
@@ -389,19 +315,13 @@ public class JwtService {
                     tokenMap.put("createdTime", token.getCreatedTime());
                     return tokenMap;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * 检查RefreshToken是否被撤销
-     */
     public boolean isRefreshTokenRevoked(String jti) {
         return revokedRefreshTokens.contains(jti);
     }
 
-    /**
-     * 获取活跃的RefreshToken数量
-     */
     public int getActiveRefreshTokenCount(String username) {
         Set<RefreshTokenInfo> tokens = userRefreshTokenMap.get(username);
         if (tokens == null) {
@@ -410,59 +330,29 @@ public class JwtService {
         return (int) tokens.stream().filter(token -> !token.isExpired()).count();
     }
 
-    /**
-     * 清理撤销令牌黑名单中的过期项 (定期调用)
-     */
     public void cleanRevokedTokens() {
-        // 这里可以根据实际需求实现清理逻辑
-        // 例如：只保留最近一段时间内被撤销的token JTI
         log.debug("清理撤销令牌黑名单，当前大小: {}", revokedRefreshTokens.size());
     }
 
-    /**
-     * 安全地从Token中提取用户名，即使Token已过期也能提取
-     */
+    // 兼容性方法 - 为保持API兼容性
     public String extractUsernameFromExpiredToken(String token) {
-        try {
-            Claims claims = extractClaimsIntelligently(token);
-            return claims.getSubject();
-        } catch (Exception e) {
-            log.warn("提取用户名失败: {}", e.getMessage());
-            return null;
-        }
+        return extractUsername(token);
     }
 
-    /**
-     * 安全地检查Token是否过期，不会因为过期而抛出异常
-     */
     public boolean isTokenExpiredSafely(String token) {
-        try {
-            Claims claims = extractClaimsIntelligently(token);
-            if (claims == null) {
-                return true; // 无法解析Claims，视为过期
-            }
-            Date expiration = claims.getExpiration();
-            return expiration != null && expiration.before(new Date());
-        } catch (Exception e) {
-            log.warn("检查Token过期状态失败: {}", e.getMessage());
-            return true; // 异常情况视为过期
-        }
+        return isTokenExpired(token);
     }
 
-    /**
-     * 安全地获取Token类型，即使Token过期也能获取
-     */
     public String getTokenTypeSafely(String token) {
-        try {
-            Claims claims = extractClaimsIntelligently(token);
-            if (claims == null) {
-                return null; // 无法解析Claims
-            }
-            return claims.get("grantType", String.class);
-        } catch (Exception e) {
-            log.warn("获取Token类型失败: {}", e.getMessage());
-            return null;
-        }
+        return getTokenType(token);
+    }
+
+    public String extractUsernameFromRefreshToken(String refreshToken) {
+        return extractUsername(refreshToken);
+    }
+
+    public String extractJtiFromRefreshToken(String refreshToken) {
+        return extractJti(refreshToken);
     }
 
     /**
@@ -498,68 +388,29 @@ public class JwtService {
     }
 
     /**
-     * 从RefreshToken中安全提取用户名
+     * RefreshToken信息内部类
      */
-    public String extractUsernameFromRefreshToken(String refreshToken) {
-        try {
-            Claims claims = extractClaimsIntelligently(refreshToken);
-            return claims != null ? claims.getSubject() : null;
-        } catch (Exception e) {
-            log.warn("从RefreshToken提取用户名失败: {}", e.getMessage());
-            return null;
-        }
-    }
-
-    /**
-     * 从RefreshToken中安全提取JTI
-     */
-    public String extractJtiFromRefreshToken(String refreshToken) {
-        try {
-            Claims claims = extractClaimsIntelligently(refreshToken);
-            return claims != null ? claims.get("jti", String.class) : null;
-        } catch (Exception e) {
-            log.warn("从RefreshToken提取JTI失败: {}", e.getMessage());
-            return null;
-        }
-    }
-
-    /**
-     * RefreshToken信息内部类 - 增强版本
-     */
+    @Getter
     private static class RefreshTokenInfo {
         private final String jti; // JWT ID - 唯一标识
         private final Date expireTime; // 过期时间
         private final String deviceInfo; // 设备信息
         private final String clientIp; // 客户端IP
         private final Date createdTime; // 创建时间
+        private final String refreshToken;
 
-        public RefreshTokenInfo(String jti, String token, Date expireTime,
-                                String deviceInfo, String clientIp) {
+        public RefreshTokenInfo(String jti, String refreshToken, Date expireTime,
+                String deviceInfo, String clientIp) {
             this.jti = jti;
             this.expireTime = expireTime;
             this.deviceInfo = deviceInfo;
+            this.refreshToken = refreshToken;
             this.clientIp = clientIp;
             this.createdTime = new Date();
         }
 
         public boolean isExpired() {
             return new Date().after(expireTime);
-        }
-
-        public String getJti() {
-            return jti;
-        }
-
-        public String getDeviceInfo() {
-            return deviceInfo;
-        }
-
-        public String getClientIp() {
-            return clientIp;
-        }
-
-        public Date getCreatedTime() {
-            return createdTime;
         }
 
         @Override
